--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "web-app",
+  "name": "fireflynexus",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:prod": "NODE_ENV=production vite build",
     "preview": "vite preview",
-    "vercel-build": "npm run build:prod"
+    "start": "vite preview --port 3000 --host",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -25,7 +25,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.2.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
